--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 orjson==3.9.13
 passlib==1.7.4
+psycopg2-binary==2.9.9
 pydantic==2.6.1
 pydantic-extra-types==2.5.0
 pydantic-settings==2.1.0
